# ForkFit

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  docker-dev.sh  nginx.conf  package-lock.json  pyproject.toml  test_fork_flow.mjs
apps/web/: Dockerfile.dev  README.md  next.config.ts  package-lock.json  package.json
data/recipes/: public_beta_recipes.json  themealdb_recipes.json
docs/: architecture.md  implementation-plan.md  recipe-image-sources.md  requirements.md
examples/: run_demo.py
scripts/: backup_postgres.sh  build_themealdb_recipes.py  dev_start.sh  dev_status.sh  dev_stop.sh  hide_posts_by_source.py  import_recipes.py  journal_error_summary.sh  run_api.py  run_real_langgraph.py  run_worker.py  seed_recipes.py  smoke_bailian.py  translate_recipes_zh.py
src/forkfit/: __init__.py  agents.py  config.py  fixtures.py  kafka_utils.py  langgraph_workflow.py  llm.py  models.py  post_extraction.py  preset_posts.py  redis_utils.py  serialization.py  workflow.py
tests/: test_admin_routes.py  test_agent_eval_set.py  test_api_posts.py  test_api_runs.py  test_api_runs_integration.py  test_api_schemas.py  test_api_upload.py  test_bailian_llm.py  test_db_migrations.py  test_demo_auth.py  test_fork_flow_e2e.py  test_forkfit_agents.py  test_import_recipes.py  test_inmemory_executor.py  test_langsmith_observability.py  test_post_extraction.py  test_postgres_run_store.py  test_redis_executor.py  test_run_store.py  test_security_and_health.py  test_translate_recipes_zh.py
(+116 files in other folders)
