[project]
name = "forkfit"
version = "0.1.0"
description = "Three-agent meal-pack personalization core for community meal plan forks."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "langgraph>=0.2",
    "uvicorn>=0.30",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
