[project]
name = "forkfit"
version = "0.1.0"
description = "Three-agent meal-pack personalization core for community meal plan forks."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "bcrypt>=4.0",
    "confluent-kafka>=2.3",
    "fastapi>=0.115",
    "langgraph>=0.2",
    "langsmith>=0.8",
    "psycopg[binary]>=3.2",
    "python-multipart>=0.0.6",
    "PyJWT>=2.8",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "uvicorn>=0.30",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
